kuard-deployment.yaml
apiVersion: extensions/v1beta1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: kuard
  annotations:
    federation.kubernetes.io/deployment-preferences: |
      {
        "rebalance": true,
        "clusters": {
          "federation-br": {
             "minReplicas": 0,
             "maxReplicas": 1,
             "weight": 1
          },
          "federation-eu": {
              "minReplicas": 1,
              "weight": 2  
          },
        }
      }
spec:
  selector:
    matchLabels:
      app: kuard
  replicas: 2 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod-nginx.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        app: kuard
    spec:
      containers:
      - name: kuard
        image: gcr.io/kuar-demo/kuard-amd64:1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kuard
  name: kuard
spec:
  ports:
  - port: 80
    protocol: TCP
    nodePort: 30081
    targetPort: 8080
    name: http
  selector:
    app: kuard
  type: NodePort
