service-lb-internal.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
  name: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http
  selector:
    app: nginx
  type: LoadBalancer
