ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: federated-ingress
  annotations:
#    kubernetes.io/ingress.class: nginx
#    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.class: gce-multi-cluster
    kubernetes.io/ingress.global-static-ip-name: "k-ingress"
spec:
#  backend:
#    serviceName: nginx-nodeport
#    servicePort: 80
  rules:
    - host: nginx
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx-nodeport
              servicePort: 80
